--- a/index.html
+++ b/index.html
@@ -1,48 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
+
 <body>
     <nav class="p-3 bg-white flex justify-between items-center">
-       <a href="#" id="brand" class="flex gap-2 items-center">
-        <img src="./assets/images/asset 0.png" alt="logo" class="object-cover w-12 h-12">
-        <span class="text-lg font-semibold font-display">ToDesktop</span>
-       </a>
-       <div id="nav-menu" class="hidden lg:flex gap-12 font-display">
-        <a href="#" class="font-medium hover:text-primary">Pricing</a>
-        <a href="#" class="font-medium hover:text-primary">Docs</a>
-        <a href="#" class="font-medium hover:text-primary">Changelog</a>
-        <a href="#" class="font-medium hover:text-primary">Blogs</a>
-        <a href="#" class="font-medium hover:text-primary">Login</a>
-       </div>
-       <button class="hidden lg:flex items-center gap-2 border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 font-display font-medium"><img src="./assets/images/asset 1.svg" alt="asset">Electron Developer<i class="fa-solid fa-arrow-right text-gray-400"></i></button>
-       <button class="p-2 lg:hidden" onclick="handleMenu()"><i class="fa-solid fa-bars text-gray-600"></i></button>
+        <a href="#" id="brand" class="flex gap-2 items-center">
+            <img src="./assets/images/asset 0.png" alt="logo" class="object-cover w-12 h-12">
+            <span class="text-lg font-semibold font-display">ToDesktop</span>
+        </a>
+        <div id="nav-menu" class="hidden lg:flex gap-12 font-display">
+            <a href="#" class="font-medium hover:text-primary">Pricing</a>
+            <a href="#" class="font-medium hover:text-primary">Docs</a>
+            <a href="#" class="font-medium hover:text-primary">Changelog</a>
+            <a href="#" class="font-medium hover:text-primary">Blogs</a>
+            <a href="#" class="font-medium hover:text-primary">Login</a>
+        </div>
+        <button
+            class="hidden lg:flex items-center gap-2 border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 font-display font-medium"><img
+                src="./assets/images/asset 1.svg" alt="asset">Electron Developer<i
+                class="fa-solid fa-arrow-right text-gray-400"></i></button>
+        <button class="p-2 lg:hidden" onclick="handleMenu()"><i
+                class="fa-solid fa-bars text-gray-600 text-xl"></i></button>
 
-       <div class="hidden fixed bg-white inset-0 p-3 z-10 md:hidden" id="nav-dialog">
-          <div id="nav-bar" class="flex justify-between">
-            <a href="#" id="brand" class="flex gap-2 items-center">
-                <img src="./assets/images/asset 0.png" alt="logo" class="object-cover max-w-12 max-h-12">
-                <span class="text-lg font-semibold font-display">ToDesktop</span>
-               </a>
-            <button class="p-2 md:hidden" onclick="handleMenu()"><i class="fa-solid fa-xmark text-gray-600"></i></button>
-          </div>
-          <div class="mt-6">
-            <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Pricing</a>
-            <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Docs</a>
-            <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Changelog</a>
-            <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Blogs</a>
-            <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Login</a>
-           </div>
-           <div class="h-[1px] bg-gray-400"></div>
-           <button class="w-full flex items-center gap-2 mt-6 px-6 py-4 hover:bg-gray-50 rounded-lgfont-display font-medium"><img src="./assets/images/asset 1.svg" alt="asset">Electron Developer</button>
-       </div>
+        <div class="hidden fixed bg-white inset-0 p-3 z-10 md:hidden" id="nav-dialog">
+            <div id="nav-bar" class="flex justify-between">
+                <a href="#" id="brand" class="flex gap-2 items-center">
+                    <img src="./assets/images/asset 0.png" alt="logo" class="object-cover max-w-12 max-h-12">
+                    <span class="text-lg font-semibold font-display">ToDesktop</span>
+                </a>
+                <button class="p-2 md:hidden" onclick="handleMenu()"><i
+                        class="fa-solid fa-xmark text-gray-600 text-2xl"></i></button>
+            </div>
+            <div class="mt-6">
+                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Pricing</a>
+                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Docs</a>
+                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Changelog</a>
+                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Blogs</a>
+                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Login</a>
+            </div>
+            <div class="h-[1px] bg-gray-400"></div>
+            <button
+                class="w-full flex items-center gap-2 mt-6 px-6 py-4 hover:bg-gray-50 rounded-lgfont-display font-medium"><img
+                    src="./assets/images/asset 1.svg" alt="asset">Electron Developer</button>
+        </div>
     </nav>
+    <main id="main">
+        <div id="hero" class="min-h-screen bg-gradient-to-br from-purple-100 via-orange-50 to transparent pt-8">
+            <div id="hero-container" class="max-w-4xl mx-auto px-6 pb-32 flex flex-col sm:items-center sm:text-center">
+                <div id="version-text"
+                    class="flex mb-10 gap-2 items-center border border-yellow-300 bg-yellow-50 rounded-lg px-3 py-1 w-fit shadow-md hover:shadow-lg cursor-pointer hover:-translate-y-1 transition group">
+                    <div class="w-2 h-2 bg-yellow-400 rounded-full border border-yellow-600"></div>
+                    <p class="font-display font-medium text-yellow-800">v0.23.1</p>
+                    <i class="fa-solid fa-arrow-right text-yellow-600 group-hover:translate-x-1 transition"></i>
+                </div>
+                <div id="version-sub-heading" class="mb-8 hidden flex-col justify-center gap-5 sm:flex sm:flex-row">
+                    <div class="flex gap-2 items-center text-gray-600 font-body">
+                        <i class="fa-solid fa-file-code"></i>
+                        <p>Code optional</p>
+                    </div>
+                    <div class="flex gap-2 items-center text-gray-600 font-body">
+                        <i class="fa-regular fa-hand"></i></i>
+                        <p>Drag 7 drop builder</p>
+                    </div>
+                    <div class="flex gap-2 items-center text-gray-600 font-body">
+                        <i class="fa-solid fa-folder"></i>
+                        <p>Windows, Max, Linux</p>
+                    </div>
+                </div>
+                <h1 class="text-5xl font-semibold font-display sm:mt-6 sm:text-7xl">Web app to desktop app in minutes</h1>
+                <p class="mt-8 max-w-2xl mx-auto text-xl text-gray-800 leading-snug sm:text-center">Take your web app codebase and transform it into a cross platform desktop app with native
+                    functionality.</p>
+                <div id="buttons-container" class="mt-10 flex flex-col sm:flex-row gap-4">
+                    <button class="bg-primary px-8 py-3 font-semibold rounded-lg text-white font-display shadow-sm hover:opacity-90">Download Now</button>
+                    <button class="bg-white px-8 py-3 font-semibold rounded-lg border border-gray-400 hover:border-gray-800">Read docs</button>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
     <script src="./script.js"></script>
 </body>
+
 </html>
