--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDesktop</title>
+    <link rel="shortcut icon" href="./assets/images/asset 0.png" type="image/png">
     <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -58,21 +59,21 @@
         <div id="hero" class="min-h-screen bg-gradient-to-br from-purple-100 via-orange-50 to transparent pt-8">
             <div id="hero-container" class="max-w-4xl mx-auto px-6 pb-32 flex flex-col sm:items-center sm:text-center">
                 <div id="version-text"
-                    class="flex mb-10 gap-2 items-center border border-yellow-300 bg-yellow-50 rounded-lg px-3 py-1 w-fit shadow-md hover:shadow-lg cursor-pointer hover:-translate-y-1 transition group">
+                    class="flex mb-10 mt-8 gap-2 items-center border border-yellow-300 bg-yellow-50 rounded-lg px-3 py-1 w-fit shadow-md hover:shadow-lg cursor-pointer hover:-translate-y-1 transition group">
                     <div class="w-2 h-2 bg-yellow-400 rounded-full border border-yellow-600"></div>
                     <p class="font-display font-medium text-yellow-800">v0.23.1</p>
                     <i class="fa-solid fa-arrow-right text-yellow-600 group-hover:translate-x-1 transition"></i>
                 </div>
                 <div id="version-sub-heading" class="mb-8 hidden flex-col justify-center gap-5 sm:flex sm:flex-row">
-                    <div class="flex gap-2 items-center text-gray-600 font-body">
+                    <div class="flex gap-2 items-center text-gray-500 font-body">
                         <i class="fa-solid fa-file-code"></i>
                         <p>Code optional</p>
                     </div>
-                    <div class="flex gap-2 items-center text-gray-600 font-body">
+                    <div class="flex gap-2 items-center text-gray-500 font-body">
                         <i class="fa-regular fa-hand"></i></i>
                         <p>Drag 7 drop builder</p>
                     </div>
-                    <div class="flex gap-2 items-center text-gray-600 font-body">
+                    <div class="flex gap-2 items-center text-gray-500 font-body">
                         <i class="fa-solid fa-folder"></i>
                         <p>Windows, Max, Linux</p>
                     </div>
