--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </nav>
     <main id="main">
-        <div id="hero" class="min-h-screen bg-gradient-to-br from-purple-100 via-orange-50 to transparent pt-8">
+        <div id="hero" class="min-h-screen bg-gradient-to-b from-purple-100 via-orange-50 to transparent pt-8">
             <div id="hero-container" class="max-w-4xl mx-auto px-6 pb-32 flex flex-col sm:items-center sm:text-center">
                 <div id="version-text"
                     class="flex mb-10 mt-8 gap-2 items-center border border-yellow-300 bg-yellow-50 rounded-lg px-3 py-1 w-fit shadow-md hover:shadow-lg cursor-pointer hover:-translate-y-1 transition group">
@@ -78,16 +78,181 @@
                         <p>Windows, Max, Linux</p>
                     </div>
                 </div>
-                <h1 class="text-5xl font-semibold font-display sm:mt-6 sm:text-7xl">Web app to desktop app in minutes</h1>
-                <p class="mt-8 max-w-2xl mx-auto text-xl text-gray-800 leading-snug sm:text-center">Take your web app codebase and transform it into a cross platform desktop app with native
+                <h1 class="text-5xl font-semibold font-display sm:mt-6 sm:text-7xl">Web app to desktop app in minutes
+                </h1>
+                <p class="mt-8 max-w-2xl mx-auto text-xl text-gray-800 leading-snug sm:text-center">Take your web app
+                    codebase and transform it into a cross platform desktop app with native
                     functionality.</p>
                 <div id="buttons-container" class="mt-10 flex flex-col sm:flex-row gap-4">
-                    <button class="bg-primary px-8 py-3 font-semibold rounded-lg text-white font-display shadow-sm hover:opacity-90">Download Now</button>
-                    <button class="bg-white px-8 py-3 font-semibold rounded-lg border border-gray-400 hover:border-gray-800">Read docs</button>
+                    <button
+                        class="bg-primary px-8 py-3 font-semibold rounded-lg text-white font-display shadow-sm hover:opacity-90">Download
+                        Now</button>
+                    <button
+                        class="bg-white px-8 py-3 font-semibold rounded-lg border border-gray-400 hover:border-gray-800">Read
+                        docs</button>
                 </div>
             </div>
+            <div id="companies-container" class="flex flex-col gap-8">
+                <div id="companies-title" class="flex gap-4 justify-center">
+                    <img class="translate-y-2" src="./assets/images/asset 2.svg" alt="arrow">
+                    <span class="font-semibold uppercase">Apps powered by ToDesktop</span>
+                    <img src="./assets/images/asset 2.svg" alt="arrow" class="translate-y-2 -scale-x-100">
+                </div>
+                <div id="companies-lines-group" class="flex flex-col gap-4 overflow-hidden">
+                    <div id="line-1" class="flex gap-4 w-screen -translate-x-48 transition-transform ease-linear">
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 3.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Ready Runner</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 4.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Life At</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 5.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Convoy</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 6.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Morgen</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 7.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Campsite</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 8.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Rise</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 9.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">ClickUp</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 10.png" alt="">
+                            <span class="text-[10px] md:text-[14px] font-semibold">Notion Calendar</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 11.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Sunsama</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 21.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Basedash</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 22.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Cursor</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 23.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Linear</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 24.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Voiceflow</span>
+                        </div>
+                    </div>
 
+                    <div id="line-2" class="flex gap-4 w-screen -translate-x-36 transition-transform ease-linear">
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 12.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Beeper</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 13.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Cal</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 14.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Webstudio</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 15.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Modyfi</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 16.png" alt="">
+                            <span class="text-[10px] md:text-[14px] font-semibold">Superpowered</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 17.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Slite</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 18.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Typefully</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 19.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Unbounce</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 20.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Moises</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 26.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Cron</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 27.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Bento</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 28.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Grain</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 29.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Conjure</span>
+                        </div>
+                    </div>
+
+                    <div id="line-3" class="flex gap-4 w-screen -translate-x-48 transition-transform ease-linear md:hidden">
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 21.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Basedash</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 22.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Cursor</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 23.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Linear</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 24.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Voiceflow</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 25.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Kitemaker</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 26.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Cron</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 27.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Bento</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 28.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Grain</span>
+                        </div>
+                        <div class="flex flex-col min-w-24 min-h-24 items-center justify-center bg-white rounded-xl border border-gray-300 md:min-h-32 md:min-w-32">
+                            <img  class="w-12 h-12 md:h-16 md:w-16" src="./assets/images/asset 29.png" alt="">
+                            <span class="text-[12px] md:text-[16px] font-semibold">Conjure</span>
+                        </div>
+
+                    </div>
+                    
+                </div>
+            </div>
         </div>
+    <div class="h-[1000px]"></div>
     </main>
 
     <script src="./script.js"></script>
