--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             <span class="text-lg font-semibold font-display">ToDesktop</span>
         </a>
         <div id="nav-menu" class="hidden lg:flex gap-12 font-display">
-            <a href="#" class="font-medium hover:text-primary">Pricing</a>
-            <a href="#" class="font-medium hover:text-primary">Docs</a>
-            <a href="#" class="font-medium hover:text-primary">Changelog</a>
-            <a href="#" class="font-medium hover:text-primary">Blogs</a>
-            <a href="#" class="font-medium hover:text-primary">Login</a>
+            <a href="#hero" class="font-medium hover:text-primary">Home</a>
+            <a href="#pricing" class="font-medium hover:text-primary">Pricing</a>
+            <a href="#steps" class="font-medium hover:text-primary">Docs</a>
+            <a href="#bento" class="font-medium hover:text-primary">Changelog</a>
+            <a href="#testimonials" class="font-medium hover:text-primary">Blogs</a>
+            <a href="#faqs" class="font-medium hover:text-primary">FAQS</a>
         </div>
         <button
             class="hidden lg:flex items-center gap-2 border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 font-display font-medium"><img
