--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
                         class="fa-solid fa-xmark text-gray-600 text-2xl"></i></button>
             </div>
             <div class="mt-6">
-                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Pricing</a>
-                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Docs</a>
-                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Changelog</a>
-                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Blogs</a>
-                <a href="#" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Login</a>
+                <a href="#hero" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Home</a>
+                <a href="#pricing" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Pricing</a>
+                <a href="#steps" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Docs</a>
+                <a href="#bento" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Changelog</a>
+                <a href="#testimonials" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Blogs</a>
+                <a href="#faqs" class="font-medium font-display m-3 p-3 hover:bg-gray-50 block rounded-lg">Login</a>
             </div>
             <div class="h-[1px] bg-gray-400"></div>
             <button
@@ -736,7 +737,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-1">
                         <p class="font-semibold text-lg">Is ToDesktop For Me?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-1" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -748,7 +749,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-2">
                         <p class="font-semibold text-lg">Will my app work offline?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-2" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -760,7 +761,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-3">
                         <p class="font-semibold text-lg">Can I try ToDesktop without buying?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-3" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -772,7 +773,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-4">
                         <p class="font-semibold text-lg">Which version of Electron/Chromium is used?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-4" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -784,7 +785,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-5">
                         <p class="font-semibold text-lg">Do you collect or store data about my customers?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-5" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -796,7 +797,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-6">
                         <p class="font-semibold text-lg">What support do you offer?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-6" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -808,7 +809,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-7">
                         <p class="font-semibold text-lg">Does ToDesktop work with sites built with ___?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-7" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -820,7 +821,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-8">
                         <p class="font-semibold text-lg">How does my app get updated?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-8" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -832,7 +833,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-9">
                         <p class="font-semibold text-lg">What features are on the product roadmap?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-9" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
@@ -844,7 +845,7 @@
                     <dt class="flex justify-between p-6 items-center" aria-controls="faq-10">
                         <p class="font-semibold text-lg">How does ToDesktop work under the hood?</p>
                         <!-- Start with rotate-0 for the downward-facing arrow -->
-                        <i class="fa-solid fa-chevron-up rotate-0 transition-transform duration-300"></i>
+                        <i class="fa-solid fa-chevron-up -rotate-180 transition-transform duration-300"></i>
                     </dt>
                     <dd id="faq-10" class="hidden px-6 text-lg py-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, enim tempore voluptatem nostrum
